--- a/front-end/scss/_userDash.scss
+++ b/front-end/scss/_userDash.scss
@@ -3,7 +3,7 @@
     text-align: center;
     p {
       font-family: $header-font;
-      margin: 0;
+      margin-bottom: 20px;
     }
     .logo {
       width: 150px;
