--- a/front-end/scss/_popular.scss
+++ b/front-end/scss/_popular.scss
@@ -1,34 +1,28 @@
         .popular {
-            @include grid-column(12); 
-            // border: 1px solid #194BFF; 
-            // background-color: #194BFF;
+            @include grid-row(); 
+            @include grid-column(12);
             background-color: #3f99de;
-            // position: fixed;
             bottom: 0px;
-            // height: 170px; 
-            // left:0px;
             color: white; 
-            
-
-            ul{
-                list-style: none;
+            padding-bottom: 80px;
+            h2 {
+                @include grid-column(12);
+                text-align: center;
+                font-family: $header-font;
             }
-            
             .course {
-                // @include grid-column(12);
-
+                @include grid-column(12);
+                text-align: center;
                 img {
-                    @include grid-column(5); 
-                    height: 200px; 
-                    // width: 100%; 
-                    display: block; 
-                    padding-right: 8%; 
+                    border: 5px solid white;
+                    width: 400px;
                 }
-
+                h2 {
+                    margin: 0;
+                }
                 p {
-                    margin-left: 50px;
-                    text-align: center;  
+                    font-weight: bolder;
+                    margin: 0;
                 }
-            
             }
         }
