--- a/front-end/templates/courseview.html
+++ b/front-end/templates/courseview.html
@@ -18,13 +18,9 @@
         </div>
 
         <div class="curRange">
-            <h3>Current Range: ${{range.min}} to ${{range.max}}</h3>
+            <h3>Current Range: ${{course.minPrice}} to ${{course.maxPrice}}</h3>
             <p><input type="number" placeholder="Min" ng-model="min_bid"> to <input type="number" placeholder="Max" ng-model="max_bid"></p>
             <button ng-click="changeRange()">Update Range</button>
         </div>
     </div>
-        <!--<div>
-            <h3>Current Status: Accepting Bookings</h3>
-            <button ng-click="changeStatus()">Change Status</button>
-        </div>-->
 </section>
