--- a/front-end/scss/_courseview.scss
+++ b/front-end/scss/_courseview.scss
@@ -2,6 +2,10 @@
     @include grid-row(); 
     background-color: white; 
 
+    section {
+        @include grid-column(6);
+    }
+
         .header {
             @include grid-column(12);
             background-color: #3f99de;
@@ -11,64 +15,115 @@
 
             img {
                 width: 150px; 
+                margin-top: 10px;
+                margin-bottom: 10px; 
+
             }
         }
     
     .listBox {
         // background-color: white; 
         color: black; 
+        
     
 
-    .courseTitle {
-        @include grid-column(12); 
-        // width: 100%; 
-        text-align: center; 
-    }
-
-    .list {
-        @include grid-column(5); 
-        border: 5px solid grey; 
-        overflow: scroll; 
-        margin-left: 10px; 
-        display: inline-block; 
-    
-    .labeltime {
-        font-weight: bold; 
-        // margin-right: 60px; 
-      
-    }
-
-    .labelnum {
-        font-weight: bold; 
-        // margin-right: 20px; 
-      
-    }
-}
-
-    .curRange {
-        @include grid-column(5); 
-    
-        h3 {
+        .courseTitle {
+            @include grid-column(12); 
+            // width: 100%; 
             text-align: center; 
-            margin-left: 0;
+            font-family: $header-font; 
         }
-    
-        button {
-                display: block; 
-                color: white;
-                font-weight: bolder;
-                font-size: 1em;
-                margin-left: 32%; 
-                margin-top: 20px;
-                border: 1px solid white;
-                border-radius: 50px;
-                width: 40%;
-                text-align: center;
-                height: 50px;
-                font-family: $primary-font;
-                background-color: #29c566;
-                margin-bottom: 2%; 
+
+        .bookingList {
+            p {
+                @include grid-column(6); 
+                // padding: 0; 
+                
+            }
+        }
+
+            .listTitle {
+                text-align: center; 
+                font-family: $header-font; 
+            }
+
+        .list {
+            @include grid-column(12); 
+            border: 5px solid grey; 
+            height: 300px; 
+            overflow: scroll; 
+            margin-bottom: 30px; 
+
+            p {
+            // margin-left: 10px; 
+            padding-left: 0;  
+            font-size: 1em; 
+            }
+
+        .labeltime {
+            font-weight: bold; 
+                   
+        }
+
+        .labelnum {
+            font-weight: bold;         
+        }
+        
+    }
+
+        .curRange {
+            @include grid-column(5); 
+            // font-family: $header-font; 
+            h3 {
+                text-align: center; 
+            }
+
+                p {
+                    width: 100%; 
+                    text-align: center; 
+                }
+                input {
+                    width: 75px;
+                    border: none; 
+                    border-bottom: 2px solid grey; 
+                    text-align: center; 
+                }
+            
+            button {
+                    display: block; 
+                    color: white;
+                    font-weight: bolder;
+                    font-size: 1em;
+                    margin-left: 32%; 
+                    margin-top: 20px;
+                    border: 1px solid white;
+                    border-radius: 50px;
+                    width: 40%;
+                    text-align: center;
+                    height: 50px;
+                    font-family: $primary-font;
+                    background-color: #29c566;
+                    margin-bottom: 2%; 
+            }
+        }
+    } 
+
+
+    @media (min-width: 769px) {
+        @include grid-row(); 
+
+            .listTitle {
+                // text-align: center; 
+                margin-left: 0px;
+                // margin-top: 500px; 
+
+            }
+        .curRange {
+            // @include grid-column(5); 
+            // font-family: $header-font; 
+            h3 {
+                text-align: center; 
+            }
         }
     }
-    } 
 }
