--- a/front-end/templates/courseview.html
+++ b/front-end/templates/courseview.html
@@ -9,19 +9,23 @@
             <h1>The Tradition Golf Course</h1>
         </div>
         
-        <div class="list">
-            <h3>Tee Times</h3>
-        <ul ng-repeat="booking in bookings">
-            <p><span class="labeltime"> Time: </span> {{booking.startTime}}</p>
-            <p><span class="labelnum"> Number of Golfers: </span> {{booking.golfers}}</p>
-        </ul> 
-        </div>
+        <section class="bookingList">
+            <h3 class="listTitle">Todays Tee Times</h3>
+            <div class="list">
+                <ul ng-repeat="booking in bookings">
+                    <p><span class="labeltime"> Time: </span> {{booking.startTime}}</p>
+                    <p><span class="labelnum"> Golfers: </span> {{booking.golfers}}</p>
+                </ul> 
+            </div>
+        </section>
 
-        <div class="curRange">
+        <section class="curRange">
             <h3>Current Range: ${{range.min}} to ${{range.max}}</h3>
-            <p><input type="number" placeholder="Min" ng-model="min_bid"> to <input type="number" placeholder="Max" ng-model="max_bid"></p>
-            <button ng-click="changeRange()">Update Range</button>
-        </div>
+            <div class="inputRange">
+                <p><input type="number" placeholder="Min" ng-model="min_bid"> to <input type="number" placeholder="Max" ng-model="max_bid"></p>
+                <button ng-click="changeRange()">Update Range</button>
+            </div>
+        </section>
     </div>
         <!--<div>
             <h3>Current Status: Accepting Bookings</h3>
