course view functionality

--- a/front-end/templates/courseview.html
+++ b/front-end/templates/courseview.html
@@ -2,6 +2,7 @@
 
     <header class="header">
         <img src="assets/teeup_logo.png">
+        <p>On your time. On your budget.</p>
     </header>
 
     <div class="listBox">
