--- a/front-end/templates/courseview.html
+++ b/front-end/templates/courseview.html
@@ -19,10 +19,10 @@
             </div>
         </section>
 
-        <div class="curRange">
+        <section class="curRange">
             <h3>Current Range: ${{course.minPrice}} to ${{course.maxPrice}}</h3>
             <p><input type="number" placeholder="Min" ng-model="min_bid"> to <input type="number" placeholder="Max" ng-model="max_bid"></p>
             <button ng-click="changeRange()">Update Range</button>
-        </div>
+        </section>
     </div>
 </section>
