--- a/front-end/scss/_userDash.scss
+++ b/front-end/scss/_userDash.scss
@@ -60,7 +60,7 @@
   }
 }
 
-/* Good idea: digest over time */
+/* In order to display map originally on desktop, but not on mobile */
     .desktopDefault {
       display: none;
     }
